# supergemma-autotune

./: .gitignore  CONTRIBUTING.md  LICENSE  README.md  pyproject.toml
.github/workflows/: ci.yml
docs/: SUPERGEMMA.md  VALIDATION.md
src/sg_autotune/: __init__.py  cli.py  constraints.py  exporters.py  hardware.py  metadata.py  models.py  optimizer.py  plots.py  report.py  scoring.py  search_space.py  study.py  supergemma.py  web.py
src/sg_autotune/runners/: __init__.py  base.py  llamacpp.py  mock.py  openai.py
tests/: test_capabilities.py  test_cli.py  test_constraints.py  test_eligibility.py  test_exporters.py  test_metadata.py  test_optimizer.py  test_plots.py  test_probes.py  test_report.py  test_resume.py  test_supergemma.py  test_web.py
