[build-system]
requires = ["hatchling>=1.25"]
build-backend = "hatchling.build"

[project]
name = "supergemma-autotune"
version = "0.1.0"
description = "Bayesian autotuning for local LLM runner settings."
readme = "README.md"
requires-python = ">=3.11"
license = "MIT"
authors = [{ name = "streetquant" }]
dependencies = [
  "fastapi>=0.110",
  "httpx>=0.27",
  "jinja2>=3.1",
  "numpy>=1.26",
  "psutil>=5.9",
  "pydantic>=2.6",
  "python-multipart>=0.0.9",
  "rich>=13.7",
  "scikit-learn>=1.4",
  "scipy>=1.12",
  "typer>=0.12",
  "uvicorn>=0.29",
]

[project.optional-dependencies]
dev = ["pytest>=8.0"]

[project.scripts]
sg-autotune = "sg_autotune.cli:app"

[tool.hatch.build.targets.wheel]
packages = ["src/sg_autotune"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]

[tool.ruff]
line-length = 100
